--- a/index.html
+++ b/index.html
@@ -1,51 +1,115 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Разработка веб-приложений</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+    <meta charset="UTF-8">
+    <title>Разработка веб-приложений</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    </head>
+</head>
 
-    <body>
-        <div class="body-site">
-            <header>
-                <img class="Logo" src="images/HTML5_logo.png" alt="Логотип HTML5">
-                <img class="Logo" src="images/CSS3_logo.png" alt="Логотип CSS3">
-                <p class="header">Разработка веб-приложений</p>
-                <img class="Logo" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
-                <img class="Logo" src="images/Angular_logo.png" alt="Логотип Angular">
+<body>
+<div class="body-site">
+    <header>
+        <img class="Logo-header" src="images/HTML5_logo.png" alt="Логотип HTML5">
+        <img class="Logo-header" src="images/CSS3_logo.png" alt="Логотип CSS3">
+        <p class="header">Разработка веб-приложений</p>
+        <img class="Logo-header" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
+        <img class="Logo-header" src="images/Angular_logo.png" alt="Логотип Angular">
 
-            </header>
+    </header>
 
-            <main>
-                <aside class="left">
-                    <nav>
+    <main>
+        <aside class="left">
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>Bootstrap</li>
+                    <li>AngularJS</li>
+                </ul>
+            </nav>
+        </aside>
 
-                    </nav>
-                </aside>
-
-                <section>
-
-                </section>
-
-                <aside class="right">
-                    <p>Новости<p>
+        <section>
+            <p>Клиентская часть</p>
+            <div class="articles">
+                <div class="line-1">
                     <article>
+                        <p>
+                        <img class="logo-article" src="images/HTML5_logo.png" alt="Логотип HTML5">
 
+                            <strong class="HTML">HTML5</strong> (англ. HyperText Markup Language, version 5) - язык для структурирования и предствления содержимого всемирной паутины. Эта пятая версия HTML. Хотя стандарт был завершён (рекомендованная версия к использованию) только в 2014 году. Читать далее
+                        </p>
                     </article>
                     <article>
+                        <p>
+                        <img class="logo-article" src="images/CSS3_logo.png" alt="Логотип CSS3">
 
+                            CSS (англ. Cascading Style Sheets - каскадные таблицы стилей) - формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Используется как средство описания, оформления внешнего вида веб-страниц, написанных с помощью языка разметки HTML. Читать далее
+                        </p>
                     </article>
-                </aside>
+                </div>
 
-            </main>
 
-            <footer>
+                <div class="line-2">
+                    <article>
+                        <p>
+                        <img class="logo-article" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
 
-            </footer>
+                            BOOTSTRAP (также известен как Twitter Bootstrap) - свободный набор инструментов для создания сайтов и веб-приложений. Включает в себя HTML и CSS шаблоны оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих компонентов веб-интерфейса, включая JavaScript-расширения. Читать далее
+                        </p>
+                    </article>
+                    <article>
+                        <p>
+                        <img class="logo-article" src="images/Angular_logo.png" alt="Логотип Angular">
 
-        </div>
+                            AngularJS - JavaScript-фреймворк с открытым исходным кодом. Предназначен для разработки одностраничных приложений. Его цель - расширение браузерных приложений на основе MVC шаблона, а также упрощения тестирования и разработки. Читать далее
+                        </p>
+                    </article>
+                </div>
+            </div>
+            <p>
+                В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и уверенно
+                вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как Facebook,
+                Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и сделали все
+                возможное для частичной интеграции технологий искусственного интеллекта на своих площадках.
+            </p>
 
-    </body>
+        </section>
+
+        <aside class="right">
+            <p>Новости
+            <p>
+            <article>
+                <p>Progressive Wep Apps</p>
+                <p>
+                    В последнее время популярность нативных мобильных приложений превзошла всу ожидания. Прогрессивные
+                    веб-приложения нового поколения (PWA) собрали информацию о лучшем пользовательском опыте и воплотили
+                    это в мобильны приложениях.
+                </p>
+            </article>
+            <article>
+                <p>Чат боты</p>
+                <p>
+                    В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и
+                    уверенно вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как
+                    Facebook, Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и
+                    сделали все возможное для частичной интеграции технологий искусственного интеллекта на своих
+                    площадках.
+                </p>
+            </article>
+        </aside>
+
+    </main>
+
+    <footer>
+        <p>Дата создания: 2022-11-18</p>
+        <p>KutseHaridusKeskus JKTV22</p>
+        <p>Nizhegorodtseva Olga</p>
+    </footer>
+
+</div>
+
+</body>
 </html>
