оформление главное страницы

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Разработка веб-приложений</title>
@@ -8,108 +9,131 @@
 </head>
 
 <body>
-<div class="body-site">
-    <header>
-        <img class="Logo-header" src="images/HTML5_logo.png" alt="Логотип HTML5">
-        <img class="Logo-header" src="images/CSS3_logo.png" alt="Логотип CSS3">
-        <p class="header">Разработка веб-приложений</p>
-        <img class="Logo-header" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
-        <img class="Logo-header" src="images/Angular_logo.png" alt="Логотип Angular">
-
-    </header>
-
-    <main>
-        <aside class="left">
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>Bootstrap</li>
-                    <li>AngularJS</li>
-                </ul>
-            </nav>
-        </aside>
-
-        <section>
-            <p>Клиентская часть</p>
-            <div class="articles">
-                <div class="line-1">
-                    <article>
-                        <p>
-                        <img class="logo-article" src="images/HTML5_logo.png" alt="Логотип HTML5">
-
-                            <strong class="HTML">HTML5</strong> (англ. HyperText Markup Language, version 5) - язык для структурирования и предствления содержимого всемирной паутины. Эта пятая версия HTML. Хотя стандарт был завершён (рекомендованная версия к использованию) только в 2014 году. Читать далее
-                        </p>
-                    </article>
-                    <article>
-                        <p>
-                        <img class="logo-article" src="images/CSS3_logo.png" alt="Логотип CSS3">
-
-                            CSS (англ. Cascading Style Sheets - каскадные таблицы стилей) - формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Используется как средство описания, оформления внешнего вида веб-страниц, написанных с помощью языка разметки HTML. Читать далее
-                        </p>
-                    </article>
-                </div>
-
-
-                <div class="line-2">
-                    <article>
-                        <p>
-                        <img class="logo-article" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
-
-                            BOOTSTRAP (также известен как Twitter Bootstrap) - свободный набор инструментов для создания сайтов и веб-приложений. Включает в себя HTML и CSS шаблоны оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих компонентов веб-интерфейса, включая JavaScript-расширения. Читать далее
-                        </p>
-                    </article>
-                    <article>
-                        <p>
-                        <img class="logo-article" src="images/Angular_logo.png" alt="Логотип Angular">
-
-                            AngularJS - JavaScript-фреймворк с открытым исходным кодом. Предназначен для разработки одностраничных приложений. Его цель - расширение браузерных приложений на основе MVC шаблона, а также упрощения тестирования и разработки. Читать далее
-                        </p>
-                    </article>
-                </div>
+    <div class="body-site">
+        <header>
+            <div class="logo-left">
+                <img class="Logo-header" src="images/HTML5_logo.png" alt="Логотип HTML5">
+                <img class="Logo-header" src="images/CSS3_logo.png" alt="Логотип CSS3">
             </div>
-            <p>
-                В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и уверенно
-                вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как Facebook,
-                Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и сделали все
-                возможное для частичной интеграции технологий искусственного интеллекта на своих площадках.
-            </p>
+            
+            <h1 class="header">Разработка <br> веб-приложений</h1>
+            <div class="logo-right">
+                <img class="Logo-header" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
+                <img class="Logo-header" src="images/Angular_logo.png" alt="Логотип Angular">
+            </div>
 
-        </section>
+        </header>
 
-        <aside class="right">
-            <p>Новости
-            <p>
-            <article>
-                <p>Progressive Wep Apps</p>
+        <main>
+            <aside class="left">
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>Bootstrap</li>
+                        <li>AngularJS</li>
+                    </ul>
+                </nav>
+            </aside>
+
+            <section>
                 <p>
-                    В последнее время популярность нативных мобильных приложений превзошла всу ожидания. Прогрессивные
-                    веб-приложения нового поколения (PWA) собрали информацию о лучшем пользовательском опыте и воплотили
-                    это в мобильны приложениях.
+                <h3>Клиентская часть</h3>
                 </p>
-            </article>
-            <article>
-                <p>Чат боты</p>
-                <p>
+                <div class="articles">
+                    <div class="line-1">
+                        <article>
+                            <p>
+                            <h4 class="header-article">HTML</h4>
+                            <img class="logo-article" src="images/HTML5_logo.png" alt="Логотип HTML5">
+                            <strong class="HTML">HTML5</strong> (англ. HyperText Markup Language, version 5) - язык для
+                            структурирования и предствления содержимого всемирной паутины. Эта пятая версия HTML. Хотя
+                            стандарт был завершён (рекомендованная версия к использованию) только в 2014 году. Читать
+                            далее
+                            </p>
+                        </article>
+                        <article>
+                            <p>
+                            <h4 class="header-article">CSS</h4>
+                            <img class="logo-article" src="images/CSS3_logo.png" alt="Логотип CSS3">
+                            <strong class="CSS">CSS</strong> (англ. Cascading Style Sheets - каскадные таблицы стилей) -
+                            формальный язык описания внешнего вида документа, написанного с использованием языка
+                            разметки. Используется как средство описания, оформления внешнего вида веб-страниц,
+                            написанных с помощью языка разметки HTML. Читать далее
+                            </p>
+                        </article>
+                    </div>
+
+
+                    <div class="line-2">
+                        <article>
+                            <p>
+                            <h4 class="header-article">Bootstrap</h4>
+                            <img class="logo-article" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
+                            <strong class="Bootstrap">BOOTSTRAP</strong> (также известен как Twitter Bootstrap) -
+                            свободный набор инструментов для создания сайтов и веб-приложений. Включает в себя HTML и
+                            CSS шаблоны оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих
+                            компонентов веб-интерфейса, включая JavaScript-расширения. Читать далее
+                            </p>
+                        </article>
+                        <article>
+                            <p>
+                            <h4 class="header-article">AngularJS</h4>
+                            <img class="logo-article" src="images/Angular_logo.png" alt="Логотип Angular">
+                            <strong class="AngularJS">AngularJS</strong> - JavaScript-фреймворк с открытым исходным
+                            кодом. Предназначен для разработки одностраничных приложений. Его цель - расширение
+                            браузерных приложений на основе MVC шаблона, а также упрощения тестирования и разработки.
+                            Читать далее
+                            </p>
+                        </article>
+                    </div>
+                </div>
+                <p class="border">
                     В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и
-                    уверенно вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как
-                    Facebook, Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и
-                    сделали все возможное для частичной интеграции технологий искусственного интеллекта на своих
-                    площадках.
+                    уверенно
+                    вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как Facebook,
+                    Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и сделали все
+                    возможное для частичной интеграции технологий искусственного интеллекта на своих площадках.
                 </p>
-            </article>
-        </aside>
+            </section>
 
-    </main>
+            <aside class="right">
+                <p>
+                <h3 class="news">Новости</h3>
+                <p>
+                <article class="news">
+                    <h4 class='header-news'>Progressive Wep Apps</h4>
+                    <p class="news">
+                        В последнее время популярность нативных мобильных приложений превзошла всу ожидания.
+                        Прогрессивные
+                        веб-приложения нового поколения (PWA) собрали информацию о лучшем пользовательском опыте и
+                        воплотили
+                        это в мобильны приложениях.
+                    </p>
+                </article>
+                <article class="news">
+                    <h4 class='header-news'>Чат боты</h4>
+                    <p class="news">
+                        В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и
+                        уверенно вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как
+                        Facebook, Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и
+                        сделали все возможное для частичной интеграции технологий искусственного интеллекта на своих
+                        площадках.
+                    </p>
+                </article>
+            </aside>
 
-    <footer>
-        <p>Дата создания: 2022-11-18</p>
-        <p>KutseHaridusKeskus JKTV22</p>
-        <p>Nizhegorodtseva Olga</p>
-    </footer>
+        </main>
 
-</div>
+        <footer>
+            <p class="footer">Дата создания: 2022-11-18</p>
+            <p class="footer">KutseHaridusKeskus JKTV22</p>
+            <p class="footer">Nizhegorodtseva Olga</p>
+        </footer>
+
+    </div>
 
 </body>
+
 </html>
