--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="body-site">
+    <div class="wrapper">
         <header>
             <div class="logo-left">
                 <img class="Logo-header" src="images/HTML5_logo.png" alt="Логотип HTML5">
