--- a/HTML5.html
+++ b/HTML5.html
@@ -1,36 +1,115 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <title>HTML5</title>
-        <link rel="stylesheet" type="text/css" href="css/style_html5.css">
-    </head>
 
-    <body>
-        <div class="body-site">
+<head>
+    <meta charset="UTF-8">
+    <title>HTML5</title>
+    <link rel="stylesheet" type="text/css" href="css/style_html5.css">
+</head>
+
+<body>
+    <div class="wrapper">
         <header>
-            <img src="images/HTML5_header.png" alt="Логотип HTML5">
+            <img src="images/header_HTML5.png" alt="Логотип HTML5">
+            <nav>
+                <div class="test">
+                <a href="./index.html">Home</a>
+                <a href="./HTML5.html">HTML5</a>
+                <a href="./CSS3.html">CSS3</a>
+                <a href="./Bootstrap.html">Bootstrap</a>
+                <a href="./AngularJS.html">AngularJS</a>
+            </div>
+            </nav>
         </header>
 
         <main>
-            <p>MAIN</p>
             <aside class="left">
                 <nav>
-                    <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./HTML5.html">HTML5</a></li>
-                        <li><a href="./CSS3.html">CSS3</a></li>
-                        <li><a href="./Bootstrap.html">Bootstrap</a></li>
-                        <li><a href="./AngularJS.html">AngularJS</a></li>
-                    </ul>
+                    <a href="./index.html">Home</a>
+                    <a href="./HTML5.html">HTML5</a>
+                    <a href="./CSS3.html">CSS3</a>
+                    <a href="./Bootstrap.html">Bootstrap</a>
+                    <a href="./AngularJS.html">AngularJS</a>
                 </nav>
             </aside>
 
             <section>
-                <p>
-                    sgsjhskghs
-                </p>
+                <article class="article-1">
+                    <h2>Что такое HTML</h2>
+                    <img src="images/Oblozhka-1.png">
+                    <p>HTML (HyperText Markup Language) представляет язык разметки гипертекста, используемый
+                        преимущественно для создания документов в сети интернет. HTML начал свой путь в начале 90-х
+                        годов как примитивный язык для создания веб-страниц, и в настоящий момент уже трудно представить
+                        себе интернет без HTML. Подавляющее большинство сайтов так или иначе используют HTML.</p>
+                    <p>В 2014 году официально была завершена работа над новым стандартом - HTML5, который фактически
+                        произвел революцию, привнеся в HTML много нового.</p>
+                    <p>Что именно привнес HTML5?
+                    <ul>
+                        <li>HTML5 определяет новый алгоритм парсинга для создания структуры DOM</li>
+                        <li>добавление новых элементов и тегов, как например, элементы video, audio и ряд других</li>
+                        <li>переопределение правил и семантики уже существовавших элементов HTML</li>
+                    </ul>
+                    </p>
+                </article>
+
+                <article>
+                    <h2>Структура HTML-элементов</h2>
+                    <img src="images/html_elements.png" alt="элемент HTML" class="img-element">
+                    <p>Основными частями элемента являются:
+                    <ol>
+                        <li>Открывающий тег: Он состоит из названия (обозначения) элемента (в нашем случае, p),
+                            помещённого внутри угловых скобок. Данный тег служит признаком начала элемента, с этого
+                            момента тег начинает влиять на следующее после него содержимое.</li>
+                        <li>Закрывающий тег: выглядит как и открывающий, но содержит слеш перед названием тега. Он
+                            служит признаком конца элемента. Пропуски закрывающих тегов — типичная ошибка новичков,
+                            которая может приводить к неопределённым результатам — в лучшем случае всё сработает
+                            правильно, в других страница может вовсе не прорисоваться или прорисоваться не как
+                            ожидалось.</li>
+                        <li>Содержимое: Как видно, в нашем случае содержимым является простой текст.</li>
+                        <li>Элемент: открывающий тег + закрывающий тег + содержимое = элемент.</li>
+                    </ol>
+                    </p>
+                    <h3>Атрибуты</h3>
+                    <p>У элементов также могут быть атрибуты, которые выглядят так:</p>
+                    <img src="images/grumpy-cat-attribute-small.png" alt="атрибут html элемента" class="img-attribute">
+                    <p>Атрибуты содержат дополнительную информацию об элементе, которая, по вашему мнению, не должна
+                        отображаться в содержимом элемента. В данном случае атрибут class позволяет вам дать элементу
+                        идентификационное имя, которое в дальнейшем может быть использовано для обращения к элементу с
+                        информацией о стиле и прочими вещами.</p>
+                    <p>Атрибут должен иметь:
+                    <ol>
+                        <li>Пробел между атрибутом и именем элемента (или предыдущим атрибутом, если у элемента уже есть
+                            один или несколько атрибутов).</li>
+                        <li>Имя атрибута и следующий за ним знак равенства.</li>
+                        <li>Значение атрибута, заключённое в кавычки.</li>
+                    </ol>
+                    </p>
+                </article>
+
+                <article>
+                    <h2>Структура документа HTML5</h2>
+                    <p>Каждый HTML документ, отвечающий спецификации HTML какой-либо версии, обязан начинаться со строки
+                        декларации версии HTML, делается это с помощью объявления &lt;!DOCTYPE&gt;- доктайп . </p>
+                    <img src="images/example-code.PNG" alt="пример кода">
+                    <p>Для создания документа HTML5 нам нужны в первую очередь два элемента: DOCTYPE и html. Элемент
+                        doctype или Document Type Declaration сообщает веб-браузеру тип документа.
+                        <!DOCTYPE html> указывает, что данный документ является документом html и что используется
+                        html5, а не html4 или какая-то другая версия языка разметки.
+                    </p>
+                    <p>А элемент html между своим открывающим и закрывающим тегами содержит все содержимое документа.
+                    </p>
+                    <p>Внутри элемента html мы можем разместить два других элемента: head и body. Элемент head содержит
+                        метаданные веб-страницы - заголовок веб-страницы, тип кодировки и т.д., а также ссылки на
+                        внешние ресурсы - стили, скрипты, если они использутся. Элемент body собственно определяет
+                        содержимое html-страницы.</p>
+                    <p>Элементы, находящиеся внутри элемента &lt;html&gt;, образуют дерево документа, так называемую
+                        объектную модель документа, DOM (document object model). При этом элемент &lt;html&gt; является
+                        корневым элементом.</p>
+                    <img src="images/DOM.png" alt="Пример простейшей структуры веб-страницы">
+                </article>
+
             </section>
+
 
 
 
@@ -40,5 +119,6 @@
             <p>FOOTER</p>
         </footer>
     </div>
-    </body>
+</body>
+
 </html>
