работа над контрольной

--- a/HTML5.html
+++ b/HTML5.html
@@ -8,21 +8,23 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
-            <img src="images/header_HTML5.png" alt="Логотип HTML5">
-            <nav>
-                <div class="test">
-                <a href="./index.html">Home</a>
-                <a href="./HTML5.html">HTML5</a>
-                <a href="./CSS3.html">CSS3</a>
-                <a href="./Bootstrap.html">Bootstrap</a>
-                <a href="./AngularJS.html">AngularJS</a>
-            </div>
-            </nav>
-        </header>
+<div class="wrapper">
+    <header>
+        <img src="images/header_HTML5.png" alt="Логотип HTML5">
+    </header>
 
-        <main>
+    <main>
+        <aside class="global_nav">
+        <nav class="global-nav">
+            <a href="./index.html">Home</a>
+            <a href="./HTML5.html">HTML5</a>
+            <a href="./CSS3.html">CSS3</a>
+            <a href="./Bootstrap.html">Bootstrap</a>
+            <a href="./AngularJS.html">AngularJS</a>
+        </nav>
+        </aside>
+
+        <div class="main">
             <aside class="left">
                 <nav>
                     <a href="./index.html">Home</a>
@@ -59,12 +61,14 @@
                     <ol>
                         <li>Открывающий тег: Он состоит из названия (обозначения) элемента (в нашем случае, p),
                             помещённого внутри угловых скобок. Данный тег служит признаком начала элемента, с этого
-                            момента тег начинает влиять на следующее после него содержимое.</li>
+                            момента тег начинает влиять на следующее после него содержимое.
+                        </li>
                         <li>Закрывающий тег: выглядит как и открывающий, но содержит слеш перед названием тега. Он
                             служит признаком конца элемента. Пропуски закрывающих тегов — типичная ошибка новичков,
                             которая может приводить к неопределённым результатам — в лучшем случае всё сработает
                             правильно, в других страница может вовсе не прорисоваться или прорисоваться не как
-                            ожидалось.</li>
+                            ожидалось.
+                        </li>
                         <li>Содержимое: Как видно, в нашем случае содержимым является простой текст.</li>
                         <li>Элемент: открывающий тег + закрывающий тег + содержимое = элемент.</li>
                     </ol>
@@ -79,7 +83,8 @@
                     <p>Атрибут должен иметь:
                     <ol>
                         <li>Пробел между атрибутом и именем элемента (или предыдущим атрибутом, если у элемента уже есть
-                            один или несколько атрибутов).</li>
+                            один или несколько атрибутов).
+                        </li>
                         <li>Имя атрибута и следующий за ним знак равенства.</li>
                         <li>Значение атрибута, заключённое в кавычки.</li>
                     </ol>
@@ -111,14 +116,13 @@
             </section>
 
 
+        </div>
+    </main>
 
-
-        </main>
-
-        <footer>
-            <p>FOOTER</p>
-        </footer>
-    </div>
+    <footer>
+        <p>FOOTER</p>
+    </footer>
+</div>
 </body>
 
 </html>
