кажется придумала дизайн

--- a/HTML5.html
+++ b/HTML5.html
@@ -10,18 +10,18 @@
 <body>
 <div class="wrapper">
     <header>
-        <img src="images/header_HTML5.png" alt="Логотип HTML5">
+        <img src="images/header_HTML5-1.png" alt="Логотип HTML5">
     </header>
 
     <main>
         <aside class="global_nav">
-        <nav class="global-nav">
-            <a href="./index.html">Home</a>
-            <a href="./HTML5.html">HTML5</a>
-            <a href="./CSS3.html">CSS3</a>
-            <a href="./Bootstrap.html">Bootstrap</a>
-            <a href="./AngularJS.html">AngularJS</a>
-        </nav>
+            <nav class="global-nav">
+                <a href="./index.html">Home</a>
+                <a href="./HTML5.html">HTML5</a>
+                <a href="./CSS3.html">CSS3</a>
+                <a href="./Bootstrap.html">Bootstrap</a>
+                <a href="./AngularJS.html">AngularJS</a>
+            </nav>
         </aside>
 
         <div class="main">
@@ -38,7 +38,7 @@
             <section>
                 <article class="article-1">
                     <h2>Что такое HTML</h2>
-                    <img src="images/Oblozhka-1.png">
+                    <img src="images/man-with-question.jpg">
                     <p>HTML (HyperText Markup Language) представляет язык разметки гипертекста, используемый
                         преимущественно для создания документов в сети интернет. HTML начал свой путь в начале 90-х
                         годов как примитивный язык для создания веб-страниц, и в настоящий момент уже трудно представить
