структура страницы css

--- a/HTML5.html
+++ b/HTML5.html
@@ -27,11 +27,10 @@
         <div class="main">
             <aside class="left">
                 <nav>
-                    <a href="./index.html">Home</a>
-                    <a href="./HTML5.html">HTML5</a>
-                    <a href="./CSS3.html">CSS3</a>
-                    <a href="./Bootstrap.html">Bootstrap</a>
-                    <a href="./AngularJS.html">AngularJS</a>
+                    <a href="./index.html">Что такое HTML</a>
+                    <a href="./HTML5.html">Структура HTML-элементов</a>
+                    <a href="./CSS3.html">Атрибуты</a>
+                    <a href="./Bootstrap.html">Структура документа HTML5</a>
                 </nav>
             </aside>
 
