--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <article>
                                 <h4 class="header-article">Bootstrap</h4>
                                 <img class="logo-article" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
-                                <strong class="Bootstrap">BOOTSTRAP</strong> (также известен как Twitter Bootstrap) - свободный набор инструментов для создания сайтов и веб-приложений. Включает в себя HTML и CSS шаблоны оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих компонентов веб-интерфейса, включая JavaScript-расширения. <a href="https://coderlessons.com/tutorials/veb-razrabotka/izuchite-bootstrap/bootstrap-kratkoe-rukovodstvo" target="_blank">Читать далее</a>>
+                                <strong class="Bootstrap">BOOTSTRAP</strong> (также известен как Twitter Bootstrap) - свободный набор инструментов для создания сайтов и веб-приложений. Включает в себя HTML и CSS шаблоны оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих компонентов веб-интерфейса, включая JavaScript-расширения. <a href="https://bootstrap-5.ru/docs/5.2/getting-started/introduction/ target="_blank">Читать далее</a>>
                         </article>
                         <article>
                                 <h4 class="header-article">AngularJS</h4>
