--- a/HTML5.html
+++ b/HTML5.html
@@ -37,7 +37,7 @@
                 </div>
             </aside>
 
-            <div class="section">
+            <section>
                 <article id="article-1">
                     <h2>Что такое HTML</h2>
                     <img src="images/girl-with-question.png" alt="Рисунок мужчина с вопросом">
@@ -56,7 +56,6 @@
                             </li>
                             <li>переопределение правил и семантики уже существовавших элементов HTML</li>
                         </ul>
-
                     </div>
                 </article>
 
@@ -133,8 +132,7 @@
                         <img src="images/DOM.png" alt="Пример простейшей структуры веб-страницы">
                     </div>
                 </article>
-            </div>
-
+            </section>
         </div>
         <a href="#top">
             <img src="images/supergirl.png"
@@ -142,7 +140,6 @@
                  title="в начало"
                  class="symbol-navigation">
         </a>
-
     </main>
 
     <footer>
